# mininook

./: .gitignore  BACKLOG.md  LICENSE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build-icon.mjs
src/: App.vue  i18n.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/atoms/: LogoIcon.vue
src/components/molecules/: AddFeedForm.vue  EntryCard.vue
src/components/organisms/: BottomNav.vue  FeedFilters.vue  LoginScreen.vue  OnboardingModal.vue  OnboardingOverlay.vue  SearchModal.vue  TopNav.vue  UserMenu.vue
src/composables/: useArticleActions.ts  useArticleContent.ts  useArticleKeyboard.ts  useArticleLoader.ts  useImageSrc.ts  useInfiniteScroll.ts
src/data/: featured-feeds.json
src/directives/: tooltip.ts
src/layouts/: AppLayout.vue
src/locales/: en.json  fr.json
src/onboarding/: steps.ts
src/pages/: ArticlePage.vue  BookmarksPage.vue  CategoriesPage.vue  DismissedPage.vue  FeedPage.vue  HandlePage.vue  RegisterPage.vue  SettingsPage.vue
src/services/: enricher.ts  imageProxy.ts  miniflux.ts  reader.ts
src/services/extractors/: Extractor.ts  FranceInfoExtractor.ts  FuturaExtractor.ts  IgnExtractor.ts  LeFigaroExtractor.ts  LeMondeExtractor.ts  NextExtractor.ts  index.ts  registry.ts  schemas.ts
src/stores/: entries.ts  onboarding.ts  settings.ts
src/styles/: main.css
src/types/: meta.ts  miniflux.ts
src/utils/: contentFilters.ts  dedup.ts  detectGallery.ts  detectPaywall.ts  extractImage.ts  readingTime.ts  sortCategories.ts
(+7 files in other folders)
