[package]
name = "mininook"
version = "0.1.0"
description = "Clean desktop Miniflux client built with Vue 3 + Tauri 2"
authors = ["Vincent Cottalorda <contact@vincent-cottalorda.fr>"]
license = "CECILL-2.1"
repository = "https://github.com/MrCasquette/mininook"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mininook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
